Added ability to capture daily weather data, created new plugin helper module, updated response object shape.
THIS IS A BREAKING CHANGE

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "bunyan": "^0.22.1",
     "js-yaml": "^3.0.2",
     "dive": "^0.3.0",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "csv": "^0.3.7"
   },
   "analyze": false,
   "devDependencies": {},
