--- a/config/default.yaml
+++ b/config/default.yaml
@@ -8,3 +8,6 @@ plugins:
   wunderground:
     server: 'stationdata.wunderground.com'
     currenturi: 'http://%s/cgi-bin/stationlookup?station=%s&format=json'
+  wundergrounddaily:
+    server: 'www.wunderground.com'
+    dailyuri: 'http://%s/weatherstation/WXDailyHistory.asp?ID=%s&format=1'
