--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "pwsview",
   "version": "0.0.1",
   "author": "Mark Kwasnick <markkwasnick@gmail.com>",
-  "description": "A simple Hapi-based node.js app to query PWS data from WUnderground",
+  "description": "A simple Hapi plugin to query PWS data from WUnderground",
   "contributors": [
     {
       "name": "Josh Hill",
       "email": "jthill57@gmail.com"
     }
   ],
-  "bin": {
-    "pwsview": "./bin/server"
-  },
   "scripts": {
-    "start": "node ./index"
+    "start": "hapi -c config.json"
   },
   "main": "./lib",
   "repository": {
@@ -27,7 +24,6 @@
   ],
   "dependencies": {
     "hapi": "^3.0.1",
-    "config": "^0.4.35",
     "request": "^2.34.0",
     "bunyan": "^0.22.1",
     "js-yaml": "^3.0.2",
