--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "js-yaml": "^3.0.2",
     "dive": "^0.3.0",
     "underscore": "^1.6.0",
-    "csv": "^0.3.7"
+    "csv": "^0.3.7",
+    "xml2json": "^0.4.0"
   },
   "analyze": false,
   "devDependencies": {},
